Fixed the search bar section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
                     <li class="nav-item" style="margin-right: 15px;"><a class="nav-link active link-light" href="#" style="font-weight: bold;">SUPPORT</a></li>
                     <li class="nav-item" style="margin-right: 15px;"><a class="nav-link active link-light" href="#" style="font-weight: bold;">STUDENTS &amp; PARENTS</a></li>
                 </ul>
-                <form class="border rounded d-flex align-items-center" style="--bs-secondary: #f5cd47;--bs-secondary-rgb: 245,205,71;background: #f5cd47;width: 138px;height: 33.5px;margin-right: 0px;"><i class="fas fa-search d-none d-sm-block align-items-center h4 text-body m-0" style="font-size: 12px;text-align: left;padding-left: 30px;"></i><input class="form-control form-control-sm flex-shrink-1 align-items-center form-control-borderless" type="search" placeholder="Search" name="searchbar" style="background: rgba(255,255,255,0);--bs-primary: #49548c;--bs-primary-rgb: 73,84,140;color: #49548c;font-size: 9px;text-align: left;"></form>
+                <form>
+                    <div class="icon-input" style="display: flex; align-items: center; justify-content: center; background: #f5cd47; gap: 10px; padding: 5px 10px; border-radius: 5px;">
+                        <i class="fas fa-search d-none d-sm-block align-items-center h4 text-body m-0" style="font-size: 12px;text-align: left; color:#49548c;"></i>
+                        <input class="flex-shrink-1" type="search" placeholder="Search" name="searchbar" style="color: #49548c; flex:1;text-align: left; border: none; outline: none; background: transparent;">
+                    </div>
+                </form>
             </div>
         </div>
     </nav>
